[project]
name = "traceforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.134.0",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
traceforge = "traceforge.cli:main"
